# https-github.com-learningteam1-glove-mlops

./: .gitignore  .gitimore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: __init__.py  your_pipeline.py
data/raw/: glove_test_extract.csv
tests/: __init__.py  test_pipeline.py
