[project]
name = "glove-mlops"
version = "0.1.0"
description = "MLOps pipeline for insulating glove dielectric test data (MAIDA 211 Group Project)"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.2.3",
    "pandera==0.20.4",
    "prefect==3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.7.4",
    "pre-commit==4.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
